--- a/src/pages/eventos.astro
+++ b/src/pages/eventos.astro
@@ -1,58 +1,16 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<!-- <html lang="en"> -->
-<!--   <head> -->
-<!--     <meta charset="UTF-8" /> -->
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-<!--     <!-1- <link rel="manifest" href="manifest.json" /> -1-> -->
-
-<!--     <!-1- Google fonts -1-> -->
-<!--     <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-<!--     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
-<!--     <link -->
-<!--       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" -->
-<!--       rel="stylesheet" /> -->
-
-<!--     <!-1- font awesome -1-> -->
-<!--     <link -->
-<!--       rel="stylesheet" -->
-<!--       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" /> -->
-
-<!--     <!-1- google icons -1-> -->
-<!--     <link -->
-<!--       href="https://fonts.googleapis.com/icon?family=Material+Icons" -->
-<!--       rel="stylesheet" /> -->
-<!--     <link -->
-<!--       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" -->
-<!--       rel="stylesheet" /> -->
-
-<!--     <link rel="stylesheet" href="/src/styles/reset.css" /> -->
-<!--     <link rel="stylesheet" href="/src/styles/styles.css" /> -->
-
-<!--     <title>Bienal del Chaco</title> -->
-<!--     <script type="module" src="./js/eventos.ts"></script> -->
-<!--     <script type="module" src="./app.ts"></script> -->
-<!--     <script type="module" src="./utils.ts"></script> -->
-   
-<!--   </head> -->
-<!--   <body> -->
-<!--     <div id="header"></div> -->
-    <!-- <main> -->
 <Layout>
-      <section class="container-title">
+    <section class="container-title">
         <h1>Cronograma de <span class="cursiva">actividades</span></h1>
         <div id="left2"></div>
         <div id="right2"></div>
-      </section>
-      <div class="wrapped2">
+    </section>
+    <div class="wrapped2">
         <section class="events-gallery">
- <!-- TODO: Componente galeria de eventos!. -->        
+            <!-- TODO: Componente galeria de eventos!. -->
         </section>
-      </div>
+    </div>
 </Layout>
-    <!-- </main> -->
-    <!-- <div id="footer"></div> -->
-  <!-- </body> -->
-<!-- </html> -->
