--- a/src/pages/eventos.astro
+++ b/src/pages/eventos.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import GaleriaEventos from "../components/GaleriaEventos.astro";
 ---
 
 <Layout>
@@ -9,8 +10,6 @@ import Layout from "../layouts/Layout.astro";
         <div id="right2"></div>
     </section>
     <div class="wrapped2">
-        <section class="events-gallery">
-            <!-- TODO: Componente galeria de eventos!. -->
-        </section>
+        <GaleriaEventos />
     </div>
 </Layout>
