--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,25 +92,46 @@ import Layout from "../layouts/Layout.astro";
             >
                 <div class="list">
                     <div class="item" style="--position: 1">
-                        <img src="./images/escultor-1.jpg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-1.jpg"
+                            alt=""
+                        />
                     </div>
                     <div class="item" style="--position: 2">
-                        <img src="./images/escultor-2.jpg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-2.jpg"
+                            alt=""
+                        />
                     </div>
                     <div class="item" style="--position: 3">
-                        <img src="./images/escultor-3.jpg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-3.jpg"
+                            alt=""
+                        />
                     </div>
                     <div class="item" style="--position: 4">
-                        <img src="./images/escultor-4.jpg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-4.jpg"
+                            alt=""
+                        />
                     </div>
                     <div class="item" style="--position: 5">
-                        <img src="./images/escultor-5.jpg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-5.jpg"
+                            alt=""
+                        />
                     </div>
                     <div class="item" style="--position: 6">
-                        <img src="./images/escultor-6.jpg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-6.jpg"
+                            alt=""
+                        />
                     </div>
                     <div class="item" style="--position: 7">
-                        <img src="./images/escultor-7.jpeg" alt="" />
+                        <img
+                            src="https://storage.cloud.google.com/bienaldelchaco/img/media/escultor-7.jpeg"
+                            alt=""
+                        />
                     </div>
                 </div>
             </div>
@@ -136,17 +157,17 @@ import Layout from "../layouts/Layout.astro";
     </div>
     <div class="sponsors" id="footer-sponsors">
         <img
-            src="./images/logo-utn.png"
+            src="https://storage.cloud.google.com/bienaldelchaco/img/media/logo-utn.png"
             alt="UTN"
             title="Logo Universidad Técnologica Nacional"
         />
         <img
-            src="./images/catedra-de-dsw-high-resolution-logo-transparent.png"
+            src="https://storage.cloud.google.com/bienaldelchaco/img/media/catedra-de-dsw-high-resolution-logo-transparent.png"
             alt="Logo Catedra de DSW"
             title="Catedra de DWS"
         />
         <img
-            src="./images/arte-y-cultura-high-resolution-logo-transparent.png"
+            src="https://storage.cloud.google.com/bienaldelchaco/img/media/arte-y-cultura-high-resolution-logo-transparent.png"
             alt="Logo Arte y Cultura"
             title="Arte y cultura"
         />
