--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,7 @@
 
     <nav>
         <ul>
-            <li><a href="/index" id="inicio-tag" class="nav-btn">Inicio</a></li>
+            <li><a href="/" id="inicio-tag" class="nav-btn">Inicio</a></li>
             <li>
                 <a href="/eventos" id="eventos-tag" class="nav-btn">Eventos</a>
             </li>
