--- a/src/pages/validar.astro
+++ b/src/pages/validar.astro
@@ -101,3 +101,6 @@ const escultor_id = searchParams.get("id");
 </Layout>
 
 <script src="../scripts/validar.ts"></script>
+<script
+    src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+></script>
