--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header>
+<header id="header">
     <a href="/" class="logo-bienal">
         <svg
             id="svg"
@@ -68,5 +68,70 @@
         newCertamenNav.addEventListener("click", () => {
             certamenSelection.classList.toggle("activePopup");
         });
+    }
+
+    // ----------------------------------------------------------------------------
+
+    let lastScrollTop = 0;
+    const header = document.getElementById("header");
+    if (header) {
+        window.addEventListener("scroll", () => {
+            const scrollTop =
+                document.documentElement.scrollTop || document.body.scrollTop;
+
+            if (scrollTop === 0) {
+                // Mostrar el header cuando está en la parte superior de la página
+                header.classList.remove("hidden");
+            } else if (scrollTop > lastScrollTop) {
+                // Ocultar el header cuando se desplaza hacia abajo
+                header.classList.add("hidden");
+            } else if (scrollTop < lastScrollTop) {
+                // Mostrar el header cuando se desplaza hacia arriba
+                header.classList.remove("hidden");
+            }
+
+            // Actualizar la última posición de scroll
+            lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+        });
+    }
+
+    // ----------------------------------------------------------------------------
+
+    const paginas = ["inicio", "eventos", "certamen"];
+    const pathname = window.location.pathname.slice(1);
+    console.log(pathname);
+
+    const indice = paginas.findIndex((el) => el.includes(pathname));
+
+    console.log(`${paginas[indice]}-tag`);
+
+    const paginaActual = document.getElementById(
+        `${paginas[indice]}-tag`,
+    ) as HTMLElement;
+
+    if (paginaActual) {
+        paginaActual.classList.add("paginaActual");
+    }
+
+    // ----------------------------------------------------------------------------
+    const observer = new IntersectionObserver((entries) => {
+        for (const entry of entries) {
+            if (entry.isIntersecting) {
+                if (entry.target.classList.contains("hidden")) {
+                    entry.target.classList.add("show");
+                } else if (entry.target.classList.contains("hiddenImg")) {
+                    entry.target.classList.add("showImg");
+                }
+            }
+        }
+    });
+    const hiddenElements = document.querySelectorAll(".hidden");
+    const hiddenImgElements = document.querySelectorAll(".hiddenImg");
+    for (const element of hiddenElements) {
+        observer.observe(element);
+    }
+
+    for (const image of hiddenImgElements) {
+        observer.observe(image);
     }
 </script>
